finished for now

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'stylesheet/main.css' %}">
-    <link rel="stylesheet" href="{% static 'stylesheet/audio.css' %}">
+
     <style>
         body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
         body, html {
@@ -120,11 +120,12 @@
                 <div class="w3-row-padding w3-center">
             {% endif %}
 
-            <div class="w3-col m3 container-album w3-hover-opacity" id="song_container" onmouseover="onHover(this)" onmouseleave="onMouseLeave(this)">
+            <div class="w3-col m3 container-album w3-hover-opacity" id="song_container" onmouseover="onHover(this)" onmouseleave="onMouseLeave(this)" onclick="onClick(this)">
+                <span class="w3-center">{{ song.audio }}</span>
                 <div class="center-album"><h4 id="song_name" class="w3-wide" style="visibility: visible; position: absolute; margin-left:auto;
 margin-right:auto; ">{{ song.name }}</h4><h4 id="song_play" style="visibility: hidden; position: absolute; margin-left:auto;
 margin-right:auto;">▶</h4></div>
-                <img src="media/{{ song.cover_image }}" style="width:100%" onclick="onClick(this)" alt="{{ song.name }}">
+                <img src="media/{{ song.cover_image }}" style="width:100%" alt="{{ song.name }}">
             </div>
 
 
@@ -145,24 +146,24 @@ margin-right:auto;">▶</h4></div>
     <span class="w3-button w3-xxxlarge w3-black w3-display-topright" title="Close Modal Image" onclick="hideModal()"><i class="fa fa-remove"></i></span>
     <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
         <img id="img01" class="w3-image">
-        <div class="w3-container">
-            <template>
-            <div id="audio-player-container">
-                <audio src="" preload="metadata" loop></audio>
-{#                <p class="audio_p">audio player ish</p>#}
-                <button id="play-icon"></button>
-                <span id="current-time" class="time">0:00</span>
-                <input type="range" id="seek-slider" max="100" value="0">
-                <span id="duration" class="time">0:00</span>
-                <output id="volume-output">100</output>
-                <input type="range" id="volume-slider" max="100" value="100">
-                <button id="mute-icon"></button>
-            </div>
+        <div class="w3-white" style="width: 60%; margin: auto">
+            <h1 id="caption" class="w3-text-black w3-xxxlarge"></h1>
+            <template class="w3-white">
+                <link rel="stylesheet" href="{% static 'stylesheet/audio.css' %}">
+                <div id="audio-player-container">
+                    <audio src="" preload="metadata" loop></audio>
+                    <button id="play-icon"></button>
+                    <span id="current-time" class="time">0:00</span>
+                    <input type="range" id="seek-slider" max="100" value="0">
+                    <span id="duration" class="time">0:00</span>
+                    <output id="volume-output">100</output>
+                    <input type="range" id="volume-slider" max="100" value="100">
+                    <button id="mute-icon"></button>
 
-
-            <audio-player data-src="https://assets.codepen.io/4358584/Anitek_-_Komorebi.mp3"></audio-player>
+                </div>
             </template>
-            <h1 id="caption" class="w3-text-white  w3-xxxlarge"></h1>
+
+            <audio-player id="audio_player"></audio-player>
         </div>
     </div>
 </div>
@@ -256,7 +257,7 @@ margin-right:auto;">▶</h4></div>
 
         subtitle_div.appendChild(subtitle)
 
-    }, 8000 )
+    }, 8000 );
 
     function onHover(element){
         element.getElementsByClassName("center-album")[0].firstChild.style.visibility = "hidden";
@@ -273,13 +274,22 @@ margin-right:auto;">▶</h4></div>
         modal.style.display = 'none';
     }
 
-
     // Modal Image Gallery
     function onClick(element) {
+        // audio
+        const audio_path = element.getElementsByClassName("w3-center")[0];
+
+        const audio_player = document.getElementById("audio_player");
+        audio_player.setAttribute("data_src", "media/"+audio_path.textContent.toString());
+        console.log(audio_player.outerHTML);
+        document.getElementById("audio_player").outerHTML = audio_player.outerHTML;
+
+        element = element.querySelector("img");
         document.getElementById("img01").src = element.src;
         document.getElementById("modal01").style.display = "block";
         let captionText = document.getElementById("caption");
         captionText.innerHTML = element.alt;
+
     }
 
     // Change style of navbar on scroll
@@ -336,7 +346,7 @@ margin-right:auto;">▶</h4></div>
         let muteState = 'unmute';
         let raf = null;
 
-        audio.src = element.getAttribute('data-src');
+        audio.src = element.getAttribute('data_src');
 
         const playAnimation = lottieWeb.loadAnimation({
             container: playIconContainer,
