--- a/static/stylesheet/audio.css
+++ b/static/stylesheet/audio.css
@@ -31,14 +31,14 @@ button {
     background: linear-gradient(to left, #007db5, #ff8a00);
     z-index: -1;
 }
-.audio_p {
+p {
     position: absolute;
     top: -18px;
     right: 5%;
     padding: 0 5px;
     margin: 0;
     font-size: 28px;
-    background: white;
+    background: #fff;
 }
 #play-icon {
     margin: 20px 2.5% 10px 2.5%;
@@ -117,7 +117,7 @@ input[type="range"]::-webkit-slider-thumb {
     height: 15px;
     width: 15px;
     border-radius: 50%;
-    background-color: white;
+    background-color: #fff;
     cursor: pointer;
     margin: -7px 0 0 0;
 }
@@ -143,7 +143,7 @@ input[type="range"]::-moz-range-thumb {
     height: 15px;
     width: 15px;
     border-radius: 50%;
-    background-color: white;
+    background-color: #fff;
     cursor: pointer;
 }
 input[type="range"]:active::-moz-range-thumb {
