--- a/static/stylesheet/main.css
+++ b/static/stylesheet/main.css
@@ -33,3 +33,24 @@
     from { width: 0 }
     to { width: 105% }
 }
+
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
